<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey"
        android:tileMode="repeat"
        tools:context=".MainActivity">

        <GridView
            android:id="@+id/grid"
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:layout_marginTop="16dp"
            android:columnWidth="15dp"
            android:gravity="center"
            android:horizontalSpacing="0dp"
            android:numColumns="20"
            android:verticalSpacing="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="" />

        <GridView
            android:id="@+id/player_grid"
            android:layout_width="300dp"
            android:layout_height="450dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:columnWidth="15dp"
            android:gravity="center"
            android:horizontalSpacing="0dp"
            android:numColumns="20"
            android:verticalSpacing="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_grid">

            <Button
                android:id="@+id/top_btn"
                android:layout_width="128dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/up_btn"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/down_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <Button
                android:id="@+id/left_btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/left_btn"
                android:text=""
                app:layout_constraintBottom_toTopOf="@id/gameId"
                app:layout_constraintEnd_toStartOf="@+id/top_btn"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/down_btn"
                android:layout_width="128dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/down_btn"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/gameId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_btn" />

            <Button
                android:id="@+id/right_btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/right_btn"
                android:text=""
                app:layout_constraintBottom_toTopOf="@id/gameId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/top_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gameId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBar"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:padding="0dp"
            android:indeterminateDrawable="@drawable/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/player_one_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="1"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/player_grid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:visibility="gone"
            android:id="@+id/player_two_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="2"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/player_grid"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:visibility="gone"
            android:id="@+id/countdown_shadow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:clickable="true"/>

        <TextView
            android:id="@+id/countdown_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/grid"
            app:layout_constraintBottom_toBottomOf="@id/grid"
            android:text="3"
            android:textSize="160sp"
            android:textStyle="bold"
            android:textColor="#ff0000" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_nav"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/nav_header">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
