<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group >
        <item android:id="@+id/new_game_item"
            android:icon="@drawable/ic_fiber_new_black_24dp"
            android:title="New Game"/>
        <item android:id="@+id/multiplayer_menu_item"
            android:icon="@drawable/ic_people"
            android:title="Multiplayer"/>
        <item android:id="@+id/set_speed_item"
            android:icon="@drawable/ic_fast_forward_black_24dp"
            android:title="Set Speed"/>
        <item android:id="@+id/tilt_mode"
            android:icon="@drawable/ic_screen_rotation_black_24dp"
            android:title="Tilt Mode"/>
        <item android:id="@+id/landscape_mode"
            android:icon="@drawable/ic_stay_primary_landscape_black_24dp"
            android:title="Landscape Mode"/>
    </group>
</menu>